@@ -1,3 +1,11 @@
+2014-11-06  Michael Scholz  <mi-scholz@users.sourceforge.net>
+
+	* examples/site-lib/examp.fs (env-sound-interp,
+	granulated-sound-interp): current-edit-position added.
+
+	* examples/site-lib/extensions.fs (ramp-expt, env-expt-channel):
+	fixed.
+
 2014-11-04  Michael Scholz  <mi-scholz@users.sourceforge.net>
 
 	* examples/site-lib/clm.fs
